--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div data-testid="myTrack">Frontend</div>
 
     <!-- My GitHub URL -->
-    <a href="https://github.com/sultyl/your-repo" data-testid="githubURL">GitHub Repo</a>
+    <a href="https://github.com/sultyl/HNGX_task1" data-testid="githubURL">GitHub Repo</a>
 
     
 </body>
