--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <!-- My Slack Name -->
-    <div data-testid="slackUserName">Sultan Adeleke</div>
+    <div data-testid="slackUserName">KingSultan1️⃣</div>
 
     <!-- My Slack Display Picture -->
     <img src="/Assets/selfie.jpg" alt="Your Slack Username" data-testid="slackDisplayImage">
