--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <!-- My GitHub URL -->
     <a href="https://github.com/sultyl/HNGX_task1" data-testid="githubURL">GitHub Repo</a>
 
-    
+    <script src="script.js"></script>
 </body>
 </html>
