--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <img src="/Assets/selfie.jpg" alt="Your Slack Username" data-testid="slackDisplayImage">
 
     <!-- My Current Day of the Week -->
-    <div data-testid="currentDayOfTheWeek">Thursday</div>
+    <div data-testid="currentDayOfTheWeek"></div>
 
     <!-- My Current UTC Time -->
-    <div data-testid="currentUTCTime">04:28:26 UTC</div>
+    <div data-testid="currentUTCTime"></div>
 
     <!-- My Track -->
     <div data-testid="myTrack">Frontend</div>
